--- a/apps/meteor/package.json
+++ b/apps/meteor/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"author": {
 		"name": "SMC-Chat",
-		"url": "https://rocket.chat/"
+		"url": "https://www.unitel.com.la/"
 	},
 	"keywords": [
 		"rocketchat",
