--- a/packages/fuselage-ui-kit/package.json
+++ b/packages/fuselage-ui-kit/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://rocketchat.github.io/SMC-Chat.Fuselage/",
   "author": {
     "name": "SMC-Chat",
-    "url": "https://rocket.chat/"
+    "url": "https://www.unitel.com.la/"
   },
   "license": "MIT",
   "repository": {
