--- a/packages/message-parser/package.json
+++ b/packages/message-parser/package.json
@@ -4,7 +4,7 @@
   "version": "0.31.29",
   "author": {
     "name": "SMC-Chat",
-    "url": "https://rocket.chat/"
+    "url": "https://www.unitel.com.la/"
   },
   "license": "MIT",
   "homepage": "https://github.com/RocketChat/fuselage#readme",
