--- a/packages/livechat/package.json
+++ b/packages/livechat/package.json
@@ -11,7 +11,7 @@
 		"url": "https://github.com/RocketChat/SMC-Chat",
 		"directory": "packages/livechat"
 	},
-	"homepage": "https://rocket.chat",
+	"homepage": "https://www.unitel.com.la/",
 	"scripts": {
 		"clean": "rimraf dist",
 		"build": "cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" webpack-cli --mode production",
