--- a/packages/peggy-loader/package.json
+++ b/packages/peggy-loader/package.json
@@ -9,7 +9,7 @@
   ],
   "author": {
     "name": "SMC-Chat",
-    "url": "https://rocket.chat/"
+    "url": "https://www.unitel.com.la/"
   },
   "homepage": "https://github.com/RocketChat/fuselage#readme",
   "license": "MIT",
